@@ -1,2 +1,2 @@
 #!/bin/sh
-LD_LIBRARY_PATH=@prefix@/lib/aspnetedit:$LD_LIBRARY_PATH exec @MONO@ --debug @prefix@/lib/aspnetedit/aspnetedit.exe $MONO_EXTRA_ARGS "$@"
+LD_LIBRARY_PATH=`echo @prefix@/lib/aspnetedit:$LD_LIBRARY_PATH:@MOZILLA_HOME@ | sed 's/^://g'` exec @MONO@ --debug @prefix@/lib/aspnetedit/aspnetedit.exe $MONO_EXTRA_ARGS "$@"
