@@ -18,43 +18,50 @@ EDITOR_REFERENCES =						\
 	-r:System.Data
 
 EDITOR_CSFILES =									\
-	$(srcdir)/AssemblyInfo.cs							\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/DesignContainer.cs			\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/SelectionService.cs			\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/DesignerHost.cs			\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/ToolboxService.cs			\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/EventBindingService.cs		\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/Transaction.cs			\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/ExtenderListService.cs		\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/TypeDescriptorFilterService.cs	\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/MenuCommandService.cs		\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/TypeResolutionService.cs		\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/WebFormPage.cs			\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/WebFormReferenceManager.cs		\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/RootDesigner.cs			\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/NameCreationService.cs		\
-	$(srcdir)/AspNetEdit.Editor.UI/PropertyGrid.cs					\
-	$(srcdir)/AspNetEdit.Editor.UI/RootDesignerView.cs				\
-	$(srcdir)/AspNetEdit.Editor.UI/Toolbox.cs					\
-	$(srcdir)/AspNetEdit.Editor.UI/ToolboxItemBox.cs				\
-	$(srcdir)/AspNetEdit.Editor.Persistence/AspParser.cs				\
-	$(srcdir)/AspNetEdit.Editor.Persistence/AspTokenizer.cs				\
-	$(srcdir)/AspNetEdit.Editor.Persistence/ControlPersister.cs			\
-	$(srcdir)/AspNetEdit.Editor.Persistence/Directive.cs				\
-	$(srcdir)/AspNetEdit.Editor.Persistence/ILocation.cs				\
-	$(srcdir)/AspNetEdit.Editor.Persistence/Location.cs				\
-	$(srcdir)/AspNetEdit.Editor.Persistence/ParseException.cs			\
-	$(srcdir)/AspNetEdit.Editor.Persistence/ParsingObject.cs			\
-	$(srcdir)/AspNetEdit.Editor.Persistence/DesignTimeParser.cs			\
-	$(srcdir)/AspNetEdit.Editor.Persistence/HtmlParsingObject.cs			\
-	$(srcdir)/AspNetEdit.Editor.Persistence/RootParsingObject.cs			\
-	$(srcdir)/AspNetEdit.Editor.Persistence/ServerControlParsingObject.cs		\
-	$(srcdir)/AspNetEdit.Editor.Persistence/StrUtils.cs				\
-	$(srcdir)/AspNetEdit.Editor.Persistence/TagAttributes.cs			\
-	$(srcdir)/AspNetEdit.Editor.Persistence/TagType.cs				\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/Document.cs				\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/DocumentDirective.cs			\
-	$(srcdir)/AspNetEdit.Editor.ComponentModel/TextToolboxItem.cs
+	$(srcdir)/AssemblyInfo.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/DesignContainer.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/DesignerHost.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/Document.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/DocumentDirective.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/EventBindingService.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/ExtenderListService.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/MenuCommandService.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/NameCreationService.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/RootDesigner.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/SelectionService.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/TextToolboxItem.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/ToolboxService.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/Transaction.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/TypeDescriptorFilterService.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/TypeResolutionService.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/WebFormPage.cs \
+	$(srcdir)/AspNetEdit.Editor.ComponentModel/WebFormReferenceManager.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/AspParser.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/AspTokenizer.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/ControlPersister.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/DesignTimeParser.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/Directive.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/HtmlParsingObject.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/ILocation.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/Location.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/ParseException.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/ParsingObject.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/RootParsingObject.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/ServerControlParsingObject.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/StrUtils.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/TagAttributes.cs \
+	$(srcdir)/AspNetEdit.Editor.Persistence/TagType.cs \
+	$(srcdir)/AspNetEdit.Editor.UI/PropertyGrid.cs \
+	$(srcdir)/AspNetEdit.Editor.UI/RootDesignerView.cs \
+	$(srcdir)/AspNetEdit.Gui.Toolbox/BaseToolboxNode.cs \
+	$(srcdir)/AspNetEdit.Gui.Toolbox/CategoryToolboxNode.cs \
+	$(srcdir)/AspNetEdit.Gui.Toolbox/ItemToolboxNode.cs \
+	$(srcdir)/AspNetEdit.Gui.Toolbox/TextToolboxNode.cs \
+	$(srcdir)/AspNetEdit.Gui.Toolbox/Toolbox.cs \
+	$(srcdir)/AspNetEdit.Gui.Toolbox/ToolboxItemToolboxNode.cs \
+	$(srcdir)/AspNetEdit.Gui.Toolbox/ToolboxNodeManager.cs \
+	$(srcdir)/AspNetEdit.Gui.Toolbox/ToolboxStore.cs
+
 
 $(ASSEMBLY): $(EDITOR_CSFILES)
 	$(MCS) $(MCS_OPTIONS) $(EDITOR_REFERENCES) -debug -target:library -out:$@ $(EDITOR_CSFILES)
