@@ -1,15 +1,15 @@
-<Project name="editor" fileversion="2.0" newfilesearch="OnLoad" language="C#" ctype="DotNetProject">
+<Project name="editor" fileversion="2.0" newfilesearch="OnLoad" language="C#" clr-version="Net_1_1" ctype="DotNetProject">
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="DotNetProjectConfiguration">
       <Output directory="../../build/lib" assembly="editor" />
       <Build debugmode="True" target="Library" />
-      <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" />
+      <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" clr-version="Net_1_1" />
       <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
     </Configuration>
     <Configuration name="Release" ctype="DotNetProjectConfiguration">
       <Output directory="../../build/lib" assembly="editor" />
       <Build debugmode="False" target="Library" />
-      <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" />
+      <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" clr-version="Net_1_1" />
       <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
     </Configuration>
   </Configurations>
@@ -34,14 +34,12 @@
     <File name="./AspNetEdit.Editor.ComponentModel/NameCreationService.cs" subtype="Code" buildaction="Compile" />
     <File name="./AspNetEdit.Editor.ComponentModel/RootDesigner.cs" subtype="Code" buildaction="Compile" />
     <File name="./AspNetEdit.Editor.ComponentModel/SelectionService.cs" subtype="Code" buildaction="Compile" />
-    <File name="./AspNetEdit.Editor.ComponentModel/ToolboxService.cs" subtype="Code" buildaction="Compile" />
     <File name="./AspNetEdit.Editor.ComponentModel/Transaction.cs" subtype="Code" buildaction="Compile" />
     <File name="./AspNetEdit.Editor.ComponentModel/TypeDescriptorFilterService.cs" subtype="Code" buildaction="Compile" />
     <File name="./AspNetEdit.Editor.ComponentModel/TypeResolutionService.cs" subtype="Code" buildaction="Compile" />
     <File name="./AspNetEdit.Editor.ComponentModel/WebFormPage.cs" subtype="Code" buildaction="Compile" />
     <File name="./AspNetEdit.Editor.ComponentModel/WebFormReferenceManager.cs" subtype="Code" buildaction="Compile" />
     <File name="./AspNetEdit.Editor.UI/RootDesignerView.cs" subtype="Code" buildaction="Compile" />
-    <File name="./AspNetEdit.Editor.UI/Toolbox.cs" subtype="Code" buildaction="Compile" />
     <File name="./AspNetEdit.Editor.ComponentModel/Document.cs" subtype="Code" buildaction="Compile" />
     <File name="./AspNetEdit.Editor.ComponentModel/DocumentDirective.cs" subtype="Code" buildaction="Compile" />
     <File name="./AspNetEdit.Editor.Persistence/AspParser.cs" subtype="Code" buildaction="Compile" />
@@ -64,7 +62,17 @@
     <File name="./AspNetEdit.Editor.ComponentModel/ChangeLog" subtype="Code" buildaction="Exclude" />
     <File name="./AspNetEdit.Editor.Persistence/ChangeLog" subtype="Code" buildaction="Exclude" />
     <File name="./AspNetEdit.Editor.UI/ChangeLog" subtype="Code" buildaction="Exclude" />
-    <File name="./AspNetEdit.Editor.UI/ToolboxItemStore.cs" subtype="Code" buildaction="Compile" />
+    <File name="./AspNetEdit.Gui.Toolbox" subtype="Directory" buildaction="Compile" />
+    <File name="./AspNetEdit.Gui.Toolbox/ToolboxStore.cs" subtype="Code" buildaction="Compile" />
+    <File name="./AspNetEdit.Gui.Toolbox/ToolboxNodeManager.cs" subtype="Code" buildaction="Compile" />
+    <File name="./AspNetEdit.Gui.Toolbox/ToolboxItemToolboxNode.cs" subtype="Code" buildaction="Compile" />
+    <File name="./AspNetEdit.Gui.Toolbox/Toolbox.cs" subtype="Code" buildaction="Compile" />
+    <File name="./AspNetEdit.Gui.Toolbox/TextToolboxNode.cs" subtype="Code" buildaction="Compile" />
+    <File name="./AspNetEdit.Gui.Toolbox/CategoryToolboxNode.cs" subtype="Code" buildaction="Compile" />
+    <File name="./AspNetEdit.Gui.Toolbox/BaseToolboxNode.cs" subtype="Code" buildaction="Compile" />
+    <File name="./AspNetEdit.Gui.Toolbox/ItemToolboxNode.cs" subtype="Code" buildaction="Compile" />
+    <File name="./AspNetEdit.Editor.ComponentModel/ToolboxService.cs" subtype="Code" buildaction="Compile" />
+    <File name="./AspNetEdit.Gui.Toolbox/ChangeLog" subtype="Code" buildaction="Nothing" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="jscall" />
