@@ -1,3 +1,8 @@
+2006-04-26  Michael Hutchinson <m.j.hutchinson@gmail.com> 
+
+	* Makefile.am, script.in: Use the MOZILLA_HOME determined by configure
+	script.
+
 2006-01-16 Michael Hutchinson <m.j.hutchinson@gmail.com>
 
 	* config.in, INSTALL: update dependencies for new Toolbox
